--- a/Lab-Report-2/index.html
+++ b/Lab-Report-2/index.html
@@ -54,7 +54,7 @@
         </div>
         <nav class="menu-content">
             <ul class="menu-list">
-                <li><a href="#about">About Me</a></li>
+                <li><a href="about.html">About Me</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#academics">Academics</a></li>
                 <li><a href="#campus">Campus</a></li>
