--- a/Lab-Report-2/about.html
+++ b/Lab-Report-2/about.html
@@ -11,14 +11,14 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img src="talha.JPG" alt="Talha" class="logo-img">
-                <span class="name">Ali Emam Al Mamun</span>
+                <img src="image/talha.JPG" alt="Talha" class="logo-img">
+                <span class="name">Fahim Faisal Talha</span>
             </div>
             <nav class="header-nav">
                 <ul class="nav-menu">
                     
                     <li><a href="about.html">About Me</a></li>
-                    <li><a href="#portfolio">My Portfolio</a></li>
+                    <li><a href="portfolio.html">My Portfolio</a></li>
                 </ul>
             </nav>
             <div class="header-right">
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="about-grid">
                 <div class="about-image">
-                    <img src="talha.JPG" alt="Talha" class="profile-img">
+                    <img src="image/talha.JPG" alt="Talha" class="profile-img">
                 </div>
                 <div class="about-content">
                     <div class="title-wrapper">
