--- a/Lab-Report-2/index.html
+++ b/Lab-Report-2/index.html
@@ -15,7 +15,7 @@
     
     <header class="top-bar">
         <div class="logo-section">
-            <img src="image.png" alt="Harvard Logo" class="logo" />
+            <img src="image/image.png" alt="Harvard Logo" class="logo" />
             <span class="university-name">HARVARD UNIVERSITY</span>
         </div>
 
@@ -44,7 +44,7 @@
     <div class="menu-overlay" id="menuOverlay">
         <div class="menu-overlay-header">
             <div class="menu-logo">
-                <img src="image.png" alt="Harvard Logo" class="logo" />
+                <img src="image/image.png" alt="Harvard Logo" class="logo" />
                 <span class="university-name">HARVARD UNIVERSITY</span>
             </div>
             <button class="close-menu" id="closeMenu">
