Finish all the work

--- a/Lab-Report-2/index.html
+++ b/Lab-Report-2/index.html
@@ -55,11 +55,11 @@
         <nav class="menu-content">
             <ul class="menu-list">
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#academics">Academics</a></li>
-                <li><a href="#campus">Campus</a></li>
-                <li><a href="#focus">In Focus</a></li>
-                <li><a href="#visit">Visit</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="https://daffodilvarsity.edu.bd/">Academics</a></li>
+                <li><a href="https://daffodilvarsity.edu.bd/">Campus</a></li>
+                <li><a href="https://daffodilvarsity.edu.bd/">In Focus</a></li>
+                <li><a href="https://daffodilvarsity.edu.bd/">Visit</a></li>
             </ul>
         </nav>
     </div>
