--- a/Lab-Report-2/about.html
+++ b/Lab-Report-2/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Ali Emam Al Mamun</title>
+    <title>About - Fahim Faisal Talha</title>
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
@@ -17,6 +17,7 @@
             <nav class="header-nav">
                 <ul class="nav-menu">
                     
+                    <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html">About Me</a></li>
                     <li><a href="portfolio.html">My Portfolio</a></li>
                 </ul>
