--- a/Lab-Report-2/portfolio.html
+++ b/Lab-Report-2/portfolio.html
@@ -19,6 +19,7 @@
             <nav class="header-nav">
                 <ul class="nav-menu">
                     
+                    <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About Me</a></li>
                     <li><a href="portfolio.html" class="nav-link active">My Portfolio</a></li>
                 </ul>
