--- a/Lab-Report-2/portfolio.html
+++ b/Lab-Report-2/portfolio.html
@@ -85,7 +85,7 @@
                 </div>
                 <!-- Daraz -->
                 <div class="project-card compact">
-                    <a href="calculator.html" class="project-link-wrapper">
+                    <a href="darazindex.html" class="project-link-wrapper">
                         <div class="project-image">
                             <img src="https://static.sitejabber.com/img/websites/d/dar/daraz.pk-desktop%402x.1653086691.jpg" alt="Daraz Website">
                         </div>
